overflow issue sorted, padding on about sorted

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -14,6 +14,7 @@ html, body, #app {
 #app {
   display: flex;
   flex-direction: column;
+  overflow-x: hidden;
 }
 
 html{
